--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ header {
 }
 
 .a_conteudo {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -89,7 +89,7 @@ strong {
     justify-content: center;
     gap: 16px;
     border: 2px solid var(--cor-terciaria);
-    width: 378px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
     font-size: 1.5rem;
@@ -102,6 +102,10 @@ strong {
 
 .al_link:hover {
     background-color: var(--cor-hover);
+}
+
+.a_img {
+    width: 50%;
 }
 
 .rodape {
